--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Horiseon</title>
 </head>
 
 <body>
 
     <!-- Header start -->
+    <nav id="navigation">
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -26,9 +27,11 @@
             </ul>
         </div>
     </div>
+    
 
     <!-- Hero Section Start -->
 
+    <section id="main-content">
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -53,6 +56,7 @@
             </p>
         </div>
     </div>
+
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -77,14 +81,17 @@
         </div>
     </div>
 
+
     <!-- Footer Start -->
 
+    <section id="footer">
     <div class="footer">
         <h3>Made with ❤️️ by Horiseon</h3>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
+</section>
 </body>
 
 </html>
