config github pages css issue

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/assets/CSS/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Horiseon</title>
 </head>
 
 <body>
 
-    <!-- Header start -->
+    <!-- Navigation start -->
     <nav id="navigation">
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
+            <!--List elements -->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
