config github pages css issue again

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en-us">
 
 <head>
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Horiseon</title>
 </head>
 
