config github pages css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" a href="assets/CSS/styles.css" />
     <meta charset="UTF-8" />
     <title>Horiseon</title>
 </head>
