--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navigation start -->
     <nav id="navigation">
     <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1><a href="https://davidhsklar.github.io/code-refractor/">Hori<span class="seo">seo</span>n</a></h1>
         <div>
             <!--List elements -->
             <ul>
@@ -87,7 +87,7 @@
 
     <section id="footer">
     <div class="footer">
-        <h3>Made with ❤️️ by Horiseon</h3>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
